recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:8: error: not found: value skrink
  tree(steps-1,length*shrink,angle,skrink);
                                   ^